--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=Projeto em SpringBoot e Thymeleaf com H2
-# Configurações do H2
 
+
+# Configurações do H2
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=user
+spring.datasource.password=pass
 
 # Configurações do JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
